--- a/01.AdvancedCsharp/01.Arrays-Lists-Stacks-Queues-Homework/06.SubsetSums/06.SubsetSums.csproj
+++ b/01.AdvancedCsharp/01.Arrays-Lists-Stacks-Queues-Homework/06.SubsetSums/06.SubsetSums.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>ebeb673f-6b34-4b4a-8d7a-968e467b4b85</ProjectGuid>
+    <ProjectGuid>{F6D19C2D-78E5-45D4-981A-A6A21C2B0774}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_06.SubsetSums</RootNamespace>
-    <AssemblyName>_06.SubsetSums</AssemblyName>
+    <AssemblyName>06.SubsetSums</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="SubsetSums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
