--- a/02.OOP/07.DelegatedAndEvents/03.AsynchronousTimer/03.AsynchronousTimer.csproj
+++ b/02.OOP/07.DelegatedAndEvents/03.AsynchronousTimer/03.AsynchronousTimer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsynchronousTimer.cs" />
+    <Compile Include="AsyncTimer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
