--- a/02.OOP/07.DelegatedAndEvents/01.CustomLINQExtensionMethods/01.CustomLINQExtensionMethods.csproj
+++ b/02.OOP/07.DelegatedAndEvents/01.CustomLINQExtensionMethods/01.CustomLINQExtensionMethods.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CustomLINQExtensionMethods.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
