--- a/02.OOP/07.DelegatedAndEvents/02.InterestCalculator/02.InterestCalculator.csproj
+++ b/02.OOP/07.DelegatedAndEvents/02.InterestCalculator/02.InterestCalculator.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InterestCalculator.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
