--- a/02.OOP/07.DelegatedAndEvents/04.StudentClass/04.StudentClass.csproj
+++ b/02.OOP/07.DelegatedAndEvents/04.StudentClass/04.StudentClass.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PropertyChangedEventArgs.cs" />
     <Compile Include="StudentClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
